generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id         String          @id @default(cuid())
  created_at DateTime        @default(now())
  updated_at DateTime        @updatedAt
  email      String          @unique
  password   String
  firstname  String
  lastname   String
  phone      String
  birthday   DateTime
  street     String
  city       String
  state      String
  zip_code   String
  role       Role
  customers  Customer[]
  tickets    WintourTicket[]

  @@map("users")
}

model Customer {
  id                   String          @id @default(cuid())
  created_at           DateTime        @default(now())
  updated_at           DateTime        @updatedAt
  userId               String          @map("user_id")
  endereco             String
  bairro               String
  cep                  String
  cidade               String
  estado               String
  email                String
  nome_completo        String
  cpf                  String
  telefone_celular     String
  logradouro           String
  data_criacao_usuario DateTime        @default(now())
  razao_social         String?
  user                 User            @relation(fields: [userId], references: [id])
  sales                Sale[]
  tickets              WintourTicket[]

  @@unique([cpf, userId])
  @@index([userId])
  @@map("clientes")
}

model Sale {
  id                 String            @id @default(cuid())
  created_at         DateTime          @default(now())
  updated_at         DateTime          @updatedAt
  customerId         String            @map("customer_id")
  origin             String
  destination        String
  departureDate      DateTime          @map("departure_date")
  returnDate         DateTime?         @map("return_date")
  travelType         TravelType        @map("travel_type")
  servicesData       Json?             @map("services_data")
  sale_date          DateTime?         @map("sale_date")
  customerSource     String            @default("local") @map("customer_source")
  userId             String?           @map("user_id")
  integrationStatus  IntegrationStatus @default(pending) @map("integration_status")
  retryCount         Int               @default(0) @map("retry_count")
  lastErrorMessage   String?           @map("last_error_message")
  lastIntegrationAt  DateTime?         @map("last_integration_at")
  integrationPayload Json?             @map("integration_payload")
  integrationKey     String?           @map("integration_key")
  integrationLogs    IntegrationLog[]
  passengers         Passenger[]
  customer           Customer          @relation(fields: [customerId], references: [id])
  nextRetryAt        DateTime?         @map("next_retry_at")

  @@index([customerId])
  @@index([sale_date])
  @@index([userId])
  @@index([customerSource])
  @@index([integrationStatus])
  @@index([integrationKey])
  @@index([integrationPayload], map: "idx_sales_integration_payload", type: Gin)
  @@map("sales")
}

model Passenger {
  id         String   @id @default(cuid())
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
  saleId     String   @map("sale_id")
  fullName   String   @map("full_name")
  sale       Sale     @relation(fields: [saleId], references: [id], onDelete: Cascade)

  @@index([saleId])
  @@map("passengers")
}

model IntegrationLog {
  id        String   @id @default(cuid())
  timestamp DateTime @default(now())
  saleId    String   @map("sale_id")
  attempt   Int      @default(1)
  status    String
  payload   Json?
  response  Json?
  error     String?
  sale      Sale     @relation(fields: [saleId], references: [id], onDelete: Cascade)

  @@index([saleId, timestamp(sort: Desc)], map: "integration_logs_sale_id_timestamp_idx")
  @@map("integration_logs")
}

model WintourHeader {
  id                       String          @id @default(cuid())
  created_at               DateTime        @default(now())
  updated_at               DateTime        @updatedAt
  nr_arquivo               String          @unique
  data_geracao             String
  hora_geracao             String
  nome_agencia             String
  versao_xml               Int             @default(4)
  integration_protocol     String?         @map("integration_protocol")
  integration_raw_response String?         @map("integration_raw_response")
  integration_status       String?         @map("integration_status")
  tickets                  WintourTicket[]

  @@map("wintour_headers")
}

model WintourTicket {
  id                      String                   @id @default(cuid())
  created_at              DateTime                 @default(now())
  updated_at              DateTime                 @updatedAt
  header_id               String?                  @map("header_id")
  user_id                 String?                  @map("user_id")
  idv_externo             String?
  id_posto_atendimento    Int?
  posto_atendimento       String?
  dt_interna_cadastro     DateTime?
  data_lancamento         DateTime?
  codigo_produto          String?
  fornecedor              String?
  prestador_svc           String?
  num_bilhete             String?
  localizador             String?
  tour_code               String?
  forma_de_pagamento      String?
  cartao_mp               String?
  cartao_cp               String?
  conta_taxas_adicionais  String?
  conta_taxas_adicionais2 String?
  cod_outras_txs          String?
  cod_outras_txs2         String?
  cod_outras_txs3         String?
  cta_tx_emissao          String?
  ccustos_agencia         String?
  moeda                   String?                  @default("BRL")
  emissor                 String?
  promotor                String?
  gerente                 String?
  cliente                 String?
  ccustos_cliente         String?
  numero_requisicao       String?
  data_requisicao         DateTime?
  passageiro              String?
  tipo_passageiro         String?
  solicitante             String?
  aprovador               String?
  departamento            String?
  matricula               String?
  num_cc                  String?
  cod_autorizacao_cc      String?
  tipo_domest_inter       String?                  @default("D")
  scdp                    String?
  info_adicionais         String?
  info_internas           String?
  canal_captacao          String?
  cta_du_rav              String?                  @default("TX-DU")
  situacao_contabil       String?
  projeto                 String?
  motivo_viagem           String?
  motivo_recusa           String?
  tipo_roteiro_aereo      String?
  destino_rot_aereo       String?
  canal_venda             String?
  multi_ccustos_cli       String?
  tipo_roteiro            Int?
  tarifa_net              Int?
  tipo_emissao            String?                  @default("E")
  co2_kg                  Float?
  cid_dest_principal      String?
  customer_id             String?                  @map("customer_id")
  air_data                WintourAir?
  apportionments          WintourApportionment[]
  customer_data           WintourCustomerData?
  expiry_dates            WintourExpiry[]
  hotel_data              WintourHotel?
  location_data           WintourLocation?
  other_services          WintourOtherService?
  wintour_other           WintourOther?
  package_data            WintourPackage?
  sales_origins           WintourSalesOrigin[]
  conjugates              WintourTicketConjugate[]
  customer_record         Customer?                @relation(fields: [customer_id], references: [id])
  header                  WintourHeader?           @relation(fields: [header_id], references: [id], onDelete: Cascade)
  user                    User?                    @relation(fields: [user_id], references: [id])
  transfer_data           WintourTransfer?
  values                  WintourValue[]

  @@map("wintour_tickets")
}

model WintourApportionment {
  id              String        @id @default(cuid())
  created_at      DateTime      @default(now())
  updated_at      DateTime      @updatedAt
  ticket_id       String        @map("ticket_id")
  ccustos_cliente String
  percentual      Float
  ticket          WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_apportionments")
}

model WintourSalesOrigin {
  id         String        @id @default(cuid())
  created_at DateTime      @default(now())
  updated_at DateTime      @updatedAt
  ticket_id  String        @map("ticket_id")
  item       Int
  ticket     WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_sales_origins")
}

model WintourTicketConjugate {
  id         String        @id @default(cuid())
  created_at DateTime      @default(now())
  updated_at DateTime      @updatedAt
  ticket_id  String        @map("ticket_id")
  item       String
  ticket     WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_ticket_conjugates")
}

model WintourValue {
  id         String        @id @default(cuid())
  created_at DateTime      @default(now())
  updated_at DateTime      @updatedAt
  ticket_id  String        @map("ticket_id")
  codigo     String
  valor      Float
  valor_df   Float?
  valor_mp   Float?
  ticket     WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_values")
}

model WintourExpiry {
  id         String        @id @default(cuid())
  created_at DateTime      @default(now())
  updated_at DateTime      @updatedAt
  ticket_id  String        @map("ticket_id")
  codigo     String
  valor      DateTime
  ticket     WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_expiries")
}

model WintourAir {
  id         String           @id @default(cuid())
  created_at DateTime         @default(now())
  updated_at DateTime         @updatedAt
  ticket_id  String           @unique @map("ticket_id")
  ticket     WintourTicket    @relation(fields: [ticket_id], references: [id], onDelete: Cascade)
  sections   WintourSection[]

  @@map("wintour_airs")
}

model WintourSection {
  id                  String     @id @default(cuid())
  created_at          DateTime   @default(now())
  updated_at          DateTime   @updatedAt
  air_id              String     @map("air_id")
  cia_iata            String
  numero_voo          String?
  aeroporto_origem    String
  aeroporto_destino   String
  data_partida        DateTime?
  hora_partida        String?
  data_chegada        DateTime?
  hora_chegada        String?
  classe              String?
  base_tarifaria      String?
  ticket_designator   String?
  conexao_arp_partida Int?
  conexao_arp_chegada Int?
  co2_kg              Float?
  air                 WintourAir @relation(fields: [air_id], references: [id], onDelete: Cascade)

  @@map("wintour_sections")
}

model WintourHotel {
  id              String        @id @default(cuid())
  created_at      DateTime      @default(now())
  updated_at      DateTime      @updatedAt
  ticket_id       String        @unique @map("ticket_id")
  nr_apts         Int?
  categ_apt       String?
  tipo_apt        String?
  dt_check_in     DateTime?
  dt_check_out    DateTime?
  nr_hospedes     Int?
  reg_alimentacao String?
  cod_tipo_pagto  String?
  dt_confirmacao  DateTime?
  confirmado_por  String?
  ticket          WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_hotels")
}

model WintourLocation {
  id              String        @id @default(cuid())
  created_at      DateTime      @default(now())
  updated_at      DateTime      @updatedAt
  ticket_id       String        @unique @map("ticket_id")
  cidade_retirada String?
  local_retirada  String?
  dt_retirada     DateTime?
  hr_retirada     String?
  local_devolucao String?
  dt_devolucao    DateTime?
  hr_devolucao    String?
  categ_veiculo   String?
  cod_tipo_pagto  String?
  dt_confirmacao  DateTime?
  confirmado_por  String?
  ticket          WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_locations")
}

model WintourOther {
  id         String        @id @default(cuid())
  created_at DateTime      @default(now())
  updated_at DateTime      @updatedAt
  ticket_id  String        @unique @map("ticket_id")
  descricao  String
  ticket     WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_others")
}

model WintourTransfer {
  id                 String        @id @default(cuid())
  created_at         DateTime      @default(now())
  updated_at         DateTime      @updatedAt
  ticket_id          String        @unique @map("ticket_id")
  hotel_transfer_in  String?
  cia_iata_chegada   String?
  numero_voo_chegada String?
  data_chegada_voo   DateTime?
  hora_chegada_voo   String?
  aeroporto_chegada  String?
  hotel_transfer_out String?
  data_apanhar_pax   DateTime?
  hora_apanhar_pax   String?
  cia_iata_partida   String?
  numero_voo_partida String?
  data_partida_voo   DateTime?
  hora_partida_voo   String?
  aeroporto_partida  String?
  ticket             WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_transfers")
}

model WintourPackage {
  id                 String        @id @default(cuid())
  created_at         DateTime      @default(now())
  updated_at         DateTime      @updatedAt
  ticket_id          String        @unique @map("ticket_id")
  cid_dest_principal String?
  data_inicio_pacote DateTime?
  data_fim_pacote    DateTime?
  descricao_pacote   String?
  ticket             WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_packages")
}

model WintourOtherService {
  id                      String        @id @default(cuid())
  created_at              DateTime      @default(now())
  updated_at              DateTime      @updatedAt
  ticket_id               String        @unique @map("ticket_id")
  cid_dest_principal      String?
  data_inicio_outros_svcs DateTime?
  data_fim_outros_svcs    DateTime?
  descricao_outros_svcs   String?
  ticket                  WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_other_services")
}

model WintourCustomerData {
  id              String        @id @default(cuid())
  created_at      DateTime      @default(now())
  updated_at      DateTime      @updatedAt
  ticket_id       String        @unique @map("ticket_id")
  acao_cli        String?
  razao_social    String?
  tipo_endereco   String?
  endereco        String?
  numero          String?
  complemento     String?
  bairro          String?
  cep             String?
  cidade          String?
  estado          String?
  tipo_fj         String?
  dt_nasc         DateTime?
  tel             String?
  celular         String?
  cpf_cnpj        String?
  insc_identidade String?
  sexo            String?
  dt_cadastro     DateTime?
  email           String?
  ticket          WintourTicket @relation(fields: [ticket_id], references: [id], onDelete: Cascade)

  @@map("wintour_customer_data")
}

enum Role {
  ADMIN
  USER
}

enum IntegrationStatus {
  pending
  processing
  success
  error
  manual_pending
}

enum TravelType {
  ONE_WAY
  ROUND_TRIP
  MULTI_CITY
}
