//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String [not null]
  lastname String [not null]
  phone String [not null]
  birthday DateTime [not null]
  street String [not null]
  city String [not null]
  state String [not null]
  zip_code String [not null]
  role Role [not null]
  customers clientes [not null]
  tickets wintour_tickets [not null]
}

Table clientes {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  userId String [not null]
  endereco String [not null]
  bairro String [not null]
  cep String [not null]
  cidade String [not null]
  estado String [not null]
  email String [not null]
  nome_completo String [not null]
  cpf String [not null]
  telefone_celular String [not null]
  logradouro String [not null]
  data_criacao_usuario DateTime [default: `now()`, not null]
  razao_social String
  user users [not null]
  sales sales [not null]
  tickets wintour_tickets [not null]

  indexes {
    (cpf, userId) [unique]
  }
}

Table sales {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  customerId String [not null]
  origin String [not null]
  destination String [not null]
  departureDate DateTime [not null]
  returnDate DateTime
  travelType TravelType [not null]
  servicesData Json
  sale_date DateTime
  customerSource String [not null, default: 'local']
  userId String
  integrationStatus IntegrationStatus [not null, default: 'pending']
  retryCount Int [not null, default: 0]
  lastErrorMessage String
  lastIntegrationAt DateTime
  integrationPayload Json
  integrationKey String
  integrationLogs integration_logs [not null]
  passengers passengers [not null]
  customer clientes [not null]
  nextRetryAt DateTime
}

Table passengers {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  saleId String [not null]
  fullName String [not null]
  sale sales [not null]
}

Table integration_logs {
  id String [pk]
  timestamp DateTime [default: `now()`, not null]
  saleId String [not null]
  attempt Int [not null, default: 1]
  status String [not null]
  payload Json
  response Json
  error String
  sale sales [not null]
}

Table wintour_headers {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  nr_arquivo String [unique, not null]
  data_geracao String [not null]
  hora_geracao String [not null]
  nome_agencia String [not null]
  versao_xml Int [not null, default: 4]
  integration_protocol String
  integration_raw_response String
  integration_status String
  tickets wintour_tickets [not null]
}

Table wintour_tickets {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  header_id String
  user_id String
  idv_externo String
  id_posto_atendimento Int
  posto_atendimento String
  dt_interna_cadastro DateTime
  data_lancamento DateTime
  codigo_produto String
  fornecedor String
  prestador_svc String
  num_bilhete String
  localizador String
  tour_code String
  forma_de_pagamento String
  cartao_mp String
  cartao_cp String
  conta_taxas_adicionais String
  conta_taxas_adicionais2 String
  cod_outras_txs String
  cod_outras_txs2 String
  cod_outras_txs3 String
  cta_tx_emissao String
  ccustos_agencia String
  moeda String [default: 'BRL']
  emissor String
  promotor String
  gerente String
  cliente String
  ccustos_cliente String
  numero_requisicao String
  data_requisicao DateTime
  passageiro String
  tipo_passageiro String
  solicitante String
  aprovador String
  departamento String
  matricula String
  num_cc String
  cod_autorizacao_cc String
  tipo_domest_inter String [default: 'D']
  scdp String
  info_adicionais String
  info_internas String
  canal_captacao String
  cta_du_rav String [default: 'TX-DU']
  situacao_contabil String
  projeto String
  motivo_viagem String
  motivo_recusa String
  tipo_roteiro_aereo String
  destino_rot_aereo String
  canal_venda String
  multi_ccustos_cli String
  tipo_roteiro Int
  tarifa_net Int
  tipo_emissao String [default: 'E']
  co2_kg Float
  cid_dest_principal String
  customer_id String
  air_data wintour_airs
  apportionments wintour_apportionments [not null]
  customer_data wintour_customer_data
  expiry_dates wintour_expiries [not null]
  hotel_data wintour_hotels
  location_data wintour_locations
  other_services wintour_other_services
  wintour_other wintour_others
  package_data wintour_packages
  sales_origins wintour_sales_origins [not null]
  conjugates wintour_ticket_conjugates [not null]
  customer_record clientes
  header wintour_headers
  user users
  transfer_data wintour_transfers
  values wintour_values [not null]
}

Table wintour_apportionments {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  ccustos_cliente String [not null]
  percentual Float [not null]
  ticket wintour_tickets [not null]
}

Table wintour_sales_origins {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  item Int [not null]
  ticket wintour_tickets [not null]
}

Table wintour_ticket_conjugates {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  item String [not null]
  ticket wintour_tickets [not null]
}

Table wintour_values {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  codigo String [not null]
  valor Float [not null]
  valor_df Float
  valor_mp Float
  ticket wintour_tickets [not null]
}

Table wintour_expiries {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [not null]
  codigo String [not null]
  valor DateTime [not null]
  ticket wintour_tickets [not null]
}

Table wintour_airs {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  ticket wintour_tickets [not null]
  sections wintour_sections [not null]
}

Table wintour_sections {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  air_id String [not null]
  cia_iata String [not null]
  numero_voo String
  aeroporto_origem String [not null]
  aeroporto_destino String [not null]
  data_partida DateTime
  hora_partida String
  data_chegada DateTime
  hora_chegada String
  classe String
  base_tarifaria String
  ticket_designator String
  conexao_arp_partida Int
  conexao_arp_chegada Int
  co2_kg Float
  air wintour_airs [not null]
}

Table wintour_hotels {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  nr_apts Int
  categ_apt String
  tipo_apt String
  dt_check_in DateTime
  dt_check_out DateTime
  nr_hospedes Int
  reg_alimentacao String
  cod_tipo_pagto String
  dt_confirmacao DateTime
  confirmado_por String
  ticket wintour_tickets [not null]
}

Table wintour_locations {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  cidade_retirada String
  local_retirada String
  dt_retirada DateTime
  hr_retirada String
  local_devolucao String
  dt_devolucao DateTime
  hr_devolucao String
  categ_veiculo String
  cod_tipo_pagto String
  dt_confirmacao DateTime
  confirmado_por String
  ticket wintour_tickets [not null]
}

Table wintour_others {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  descricao String [not null]
  ticket wintour_tickets [not null]
}

Table wintour_transfers {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  hotel_transfer_in String
  cia_iata_chegada String
  numero_voo_chegada String
  data_chegada_voo DateTime
  hora_chegada_voo String
  aeroporto_chegada String
  hotel_transfer_out String
  data_apanhar_pax DateTime
  hora_apanhar_pax String
  cia_iata_partida String
  numero_voo_partida String
  data_partida_voo DateTime
  hora_partida_voo String
  aeroporto_partida String
  ticket wintour_tickets [not null]
}

Table wintour_packages {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  cid_dest_principal String
  data_inicio_pacote DateTime
  data_fim_pacote DateTime
  descricao_pacote String
  ticket wintour_tickets [not null]
}

Table wintour_other_services {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  cid_dest_principal String
  data_inicio_outros_svcs DateTime
  data_fim_outros_svcs DateTime
  descricao_outros_svcs String
  ticket wintour_tickets [not null]
}

Table wintour_customer_data {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ticket_id String [unique, not null]
  acao_cli String
  razao_social String
  tipo_endereco String
  endereco String
  numero String
  complemento String
  bairro String
  cep String
  cidade String
  estado String
  tipo_fj String
  dt_nasc DateTime
  tel String
  celular String
  cpf_cnpj String
  insc_identidade String
  sexo String
  dt_cadastro DateTime
  email String
  ticket wintour_tickets [not null]
}

Enum Role {
  ADMIN
  USER
}

Enum IntegrationStatus {
  pending
  processing
  success
  error
  manual_pending
}

Enum TravelType {
  ONE_WAY
  ROUND_TRIP
  MULTI_CITY
}

Ref: clientes.userId > users.id

Ref: sales.customerId > clientes.id

Ref: passengers.saleId > sales.id [delete: Cascade]

Ref: integration_logs.saleId > sales.id [delete: Cascade]

Ref: wintour_tickets.customer_id > clientes.id

Ref: wintour_tickets.header_id > wintour_headers.id [delete: Cascade]

Ref: wintour_tickets.user_id > users.id

Ref: wintour_apportionments.ticket_id > wintour_tickets.id [delete: Cascade]

Ref: wintour_sales_origins.ticket_id > wintour_tickets.id [delete: Cascade]

Ref: wintour_ticket_conjugates.ticket_id > wintour_tickets.id [delete: Cascade]

Ref: wintour_values.ticket_id > wintour_tickets.id [delete: Cascade]

Ref: wintour_expiries.ticket_id > wintour_tickets.id [delete: Cascade]

Ref: wintour_airs.ticket_id - wintour_tickets.id [delete: Cascade]

Ref: wintour_sections.air_id > wintour_airs.id [delete: Cascade]

Ref: wintour_hotels.ticket_id - wintour_tickets.id [delete: Cascade]

Ref: wintour_locations.ticket_id - wintour_tickets.id [delete: Cascade]

Ref: wintour_others.ticket_id - wintour_tickets.id [delete: Cascade]

Ref: wintour_transfers.ticket_id - wintour_tickets.id [delete: Cascade]

Ref: wintour_packages.ticket_id - wintour_tickets.id [delete: Cascade]

Ref: wintour_other_services.ticket_id - wintour_tickets.id [delete: Cascade]

Ref: wintour_customer_data.ticket_id - wintour_tickets.id [delete: Cascade]